# flow

./: Cargo.toml  README.md  flake.nix  shell.nix  todo.md
src/: lib.rs  main.rs
src/core/: analyzer.rs  mod.rs  output.rs  player.rs  reader.rs
src/core/player/: mod.rs  output.rs
src/view/: app.rs  mod.rs
src/view/model/: track.rs
src/view/widgets/: file_list.rs  live_preview.rs  mod.rs  popup.rs  preview.rs  track_table.rs  wave.rs
