[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
aubio = {version = "0.2.1", features = ["builtin"]}
symphonia = { version = "0.5.0", features = ["mp3"] }
log = { version = "0.4.14", features = ["release_max_level_info"] }
crossterm = "0.23.0"
tokio = { version = "1", features = ["full"] }
tui = "0.17.0"
rand = "0.8.4"
itertools = "0.10.3"
indexmap = "1.8.0"
hash = "0.3.0"


[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.5"
rb = "0.4.0"
