[package]
name = "flow"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
aubio = { version = "0.2.1", features = ["builtin"] }
symphonia = { version = "0.5.0", features = ["mp3"] }
log = { version = "0.4.14", features = ["release_max_level_info"] }
crossterm = "0.23.0"
tokio = { version = "1", features = ["full"] }
tui = "0.17.0"
rand = "0.8.4"
itertools = "0.10.3"
indexmap = "1.8.0"
hash = "0.3.0"
samplerate = "0.2.4"
synthrs = {git = "https://github.com/gyng/synthrs"}
yata = { version = "0.6.0"}
bounded-vec-deque = "0.1.1"
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"

[profile.release]
opt-level=3
